--- a/static/styles.css
+++ b/static/styles.css
@@ -204,9 +204,7 @@ tr:nth-child(even) {
 
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 480px) {
+@media screen and (max-width: 768px) {
 
     #foot {
         padding-bottom: 4%;
@@ -217,8 +215,9 @@ and (max-device-width : 480px) {
         /* margin-left: 10%;
         margin-right: 10%; */
         /* padding-left: 4%; */
-        margin-left: -16%;
-        margin-right: -12%;
+        /* margin-left: -16%;
+        margin-right: -12%; */
+        width: max-content;
 
     }
 
